--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -19,6 +19,11 @@ h1{
   color: var(--amarillo-morty);
 }
 
+#inicio{
+  text-decoration: none;
+  cursor: default;
+}
+
 /* filtrado */
 
 #filtros{
