--- a/src/assets/css/detalles.css
+++ b/src/assets/css/detalles.css
@@ -19,6 +19,22 @@ h1{
     align-items: center;
 }
 
+/* loader */
+
+#loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0,0,0,0.7);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  z-index: 9999;
+}
+
+
 /* main background */
 body::before {
   content: "";
